--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "ryan.raaum@gmail.com",
            comment = c(ORCID = "0000-0003-4723-5475"))
 Description: What the package does (one paragraph).
-Imports: htmltools, knitr, rmarkdown, methods
+Imports: htmltools, knitr, rmarkdown, methods, bslib
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
